tools/juliapkg/src/api.jl


Re-compose a `duckdb_timestamp` from a duckdb_timestamp_struct.

* ts: The de-composed elements in a `duckdb_timestamp_struct`.
* returns: The `duckdb_timestamp` element.
*/
DUCKDB_API duckdb_timestamp duckdb_to_timestamp(duckdb_timestamp_struct ts);
"""
function duckdb_to_timestamp(ts)
    return ccall((:duckdb_to_timestamp, libduckdb), Ptr{Cvoid}, (Ptr{Cvoid},), ts)
end

#=
//===--------------------------------------------------------------------===//
// Hugeint Helpers
//===--------------------------------------------------------------------===//
=#


"""
duckdb_hugeint_to_double(val)

Converts a duckdb_hugeint object (as obtained from a `DUCKDB_TYPE_HUGEINT` column) into a double.

* val: The hugeint value.
* returns: The converted `double` element.

DUCKDB_API double duckdb_hugeint_to_double(duckdb_hugeint val);
"""
function duckdb_hugeint_to_double(val)
    return ccall((:duckdb_hugeint_to_double, libduckdb), Float64, (Int64,), val)
end

"""
duckdb_double_to_hugeint(val)

Converts a double value to a duckdb_hugeint object.

If the conversion fails because the double value is too big the result will be 0.

* val: The double value.
* returns: The converted `duckdb_hugeint` element.

DUCKDB_API duckdb_hugeint duckdb_double_to_hugeint(double val);
"""
function duckdb_double_to_hugeint(val)
    return ccall((:duckdb_double_to_hugeint, libduckdb), Int64, (Float64,), val)
end

#=
//===--------------------------------------------------------------------===//
// Prepared Statements
//===--------------------------------------------------------------------===//

// A prepared statement is a parameterized query that allows you to bind parameters to it.
// * This is useful to easily supply parameters to functions and avoid SQL injection attacks.
// * This is useful to speed up queries that you will execute several times with different parameters.
// Because the query will only be parsed, bound, optimized and planned once during the prepare stage,
// rather than once per execution.
// For example:
//   SELECT * FROM tbl WHERE id=?
// Or a query with multiple parameters:
//   SELECT * FROM tbl WHERE id=$1 OR name=$2
=#


"""
Create a prepared statement object from a query.

Note that after calling `duckdb_prepare`, the prepared statement should always be destroyed using
`duckdb_destroy_prepare`, even if the prepare fails.

If the prepare fails, `duckdb_prepare_error` can be called to obtain the reason why the prepare failed.

* connection: The connection object
* query: The SQL query to prepare
* out_prepared_statement: The resulting prepared statement object
* returns: `DuckDBSuccess` on success or `DuckDBError` on failure.

DUCKDB_API duckdb_state duckdb_prepare(duckdb_connection connection, const char *query,
                                       duckdb_prepared_statement *out_prepared_statement);
"""
function duckdb_prepare(connection, query, out_prepared_statement)
    return ccall(
        (:duckdb_prepare, libduckdb),
        Int32,
        (Ptr{Cvoid}, Ptr{UInt8}, Ptr{Cvoid}),
        connection[],
        query,
        out_prepared_statement,
    )
end

"""
Closes the prepared statement and de-allocates all memory allocated for that connection.

* prepared_statement: The prepared statement to destroy.

DUCKDB_API void duckdb_destroy_prepare(duckdb_prepared_statement *prepared_statement);
"""
function duckdb_destroy_prepare(prepared_statement)
    return ccall((:duckdb_prepare, libduckdb), Cvoid, (Ptr{Cvoid},), prepared_statement)
end

"""
Returns the error message associated with the given prepared statement.
If the prepared statement has no error message, this returns `nullptr` instead.

The error message should not be freed. It will be de-allocated when `duckdb_destroy_prepare` is called.

* prepared_statement: The prepared statement to obtain the error from.
* returns: The error message, or `nullptr` if there is none.

DUCKDB_API const char *duckdb_prepare_error(duckdb_prepared_statement prepared_statement);
"""
function duckdb_prepare_error(prepared_statement)
    return ccall(
        (:duckdb_prepare_error, libduckdb),
        Ptr{UInt8},
        (Ptr{Cvoid},),
        prepared_statement,
    )
end

"""
Returns the number of parameters that can be provided to the given prepared statement.

Returns 0 if the query was not successfully prepared.

* prepared_statement: The prepared statement to obtain the number of parameters for.

DUCKDB_API idx_t duckdb_nparams(duckdb_prepared_statement prepared_statement);
"""
function duckdb_nparams(prepared_statement)
    return ccall((:duckdb_nparams, libduckdb), Int32, (Ptr{Cvoid},), prepared_statement)
end

"""
Returns the parameter type for the parameter at the given index.

Returns `DUCKDB_TYPE_INVALID` if the parameter index is out of range or the statement was not successfully prepared.

* prepared_statement: The prepared statement.
* param_idx: The parameter index.
* returns: The parameter type

DUCKDB_API duckdb_type duckdb_param_type(duckdb_prepared_statement prepared_statement, idx_t param_idx);
"""
function duckdb_param_type(prepared_statement, param_idx)
    return ccall(
        (:duckdb_param_type, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32),
        prepared_statement,
        param_idx,
    )
end

"""
Binds a bool value to the prepared statement at the specified index.

DUCKDB_API duckdb_state duckdb_bind_boolean(duckdb_prepared_statement prepared_statement, idx_t param_idx, bool val);
"""
function duckdb_bind_boolean(prepared_statement, param_idx, val)
    return ccall(
        (:duckdb_bind_boolean, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32, Int32),
        prepared_statement,
        param_idx,
        val,
    )
end

"""
Binds an int8_t value to the prepared statement at the specified index.

DUCKDB_API duckdb_state duckdb_bind_int8(duckdb_prepared_statement prepared_statement, idx_t param_idx, int8_t val);
"""
function duckdb_bind_int8(prepared_statement, param_idx, val)
    return ccall(
        (:duckdb_bind_int8, libduckdb),
        Int16,
        (Ptr{Cvoid}, Int32, Int16),
        prepared_statement,
        param_idx,
        val,
    )
end

"""
Binds an int16_t value to the prepared statement at the specified index.

DUCKDB_API duckdb_state duckdb_bind_int16(duckdb_prepared_statement prepared_statement, idx_t param_idx, int16_t val);
"""
function duckdb_bind_int16(prepared_statement, param_idx, val)
    return ccall(
        (:duckdb_bind_int16, libduckdb),
        Int16,
        (Ptr{Cvoid}, Int32, Int16),
        prepared_statement,
        param_idx,
        val,
    )
end

"""
Binds an int32_t value to the prepared statement at the specified index.

DUCKDB_API duckdb_state duckdb_bind_int32(duckdb_prepared_statement prepared_statement, idx_t param_idx, int32_t val);
"""
function duckdb_bind_int32(prepared_statement, param_idx, val)
    return ccall(
        (:duckdb_bind_int32, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32, Int32),
        prepared_statement,
        param_idx,
        val,
    )
end

"""
Binds an int64_t value to the prepared statement at the specified index.

DUCKDB_API duckdb_state duckdb_bind_int64(duckdb_prepared_statement prepared_statement, idx_t param_idx, int64_t val);
"""
function duckdb_bind_int64(prepared_statement, param_idx, val)
    return ccall(
        (:duckdb_bind_int64, libduckdb),
        Int64,
        (Ptr{Cvoid}, Int32, Int64),
        prepared_statement,
        param_idx,
        val,
    )
end

"""
Binds an duckdb_hugeint value to the prepared statement at the specified index.
*/
DUCKDB_API duckdb_state duckdb_bind_hugeint(duckdb_prepared_statement prepared_statement, idx_t param_idx,
                                            duckdb_hugeint val);
"""
function duckdb_bind_hugeint(prepared_statement, param_idx, val)
    return ccall(
        (:duckdb_bind_hugeint, libduckdb),
        Int64,
        (Ptr{Cvoid}, Int32, Int64),
        prepared_statement,
        param_idx,
        val,
    )
end

"""
Binds an uint8_t value to the prepared statement at the specified index.

DUCKDB_API duckdb_state duckdb_bind_uint8(duckdb_prepared_statement prepared_statement, idx_t param_idx, uint8_t val);
"""
function duckdb_bind_uint8(prepared_statement, param_idx, val)
    return ccall(
        (:duckdb_bind_uint8, libduckdb),
        UInt16,
        (Ptr{Cvoid}, Int32, UInt16),
        prepared_statement,
        param_idx,
        val,
    )
end

"""
Binds an uint16_t value to the prepared statement at the specified index.

DUCKDB_API duckdb_state duckdb_bind_uint16(duckdb_prepared_statement prepared_statement, idx_t param_idx, uint16_t val);
"""
function duckdb_bind_uint16(prepared_statement, param_idx, val)
    return ccall(
        (:duckdb_bind_uint16, libduckdb),
        UInt16,
        (Ptr{Cvoid}, Int32, UInt16),
        prepared_statement,
        param_idx,
        val,
    )
end

"""
Binds an uint32_t value to the prepared statement at the specified index.

DUCKDB_API duckdb_state duckdb_bind_uint32(duckdb_prepared_statement prepared_statement, idx_t param_idx, uint32_t val);
"""
function duckdb_bind_uint32(prepared_statement, param_idx, val)
    return ccall(
        (:duckdb_bind_uint32, libduckdb),
        UInt32,
        (Ptr{Cvoid}, Int32, UInt32),
        prepared_statement,
        param_idx,
        val,
    )
end

"""
Binds an uint64_t value to the prepared statement at the specified index.

DUCKDB_API duckdb_state duckdb_bind_uint64(duckdb_prepared_statement prepared_statement, idx_t param_idx, uint64_t val);
"""
function duckdb_bind_uint64(prepared_statement, param_idx, val)
    return ccall(
        (:duckdb_bind_uint64, libduckdb),
        UInt64,
        (Ptr{Cvoid}, Int32, UInt64),
        prepared_statement,
        param_idx,
        val,
    )
end

"""
Binds an float value to the prepared statement at the specified index.

DUCKDB_API duckdb_state duckdb_bind_float(duckdb_prepared_statement prepared_statement, idx_t param_idx, float val);
"""
function duckdb_bind_float(prepared_statement, param_idx, val)
    return ccall(
        (:duckdb_bind_float, libduckdb),
        Float32,
        (Ptr{Cvoid}, Int32, Float32),
        prepared_statement,
        param_idx,
        val,
    )
end

"""
Binds an double value to the prepared statement at the specified index.

DUCKDB_API duckdb_state duckdb_bind_double(duckdb_prepared_statement prepared_statement, idx_t param_idx, double val);
"""
function duckdb_bind_double(prepared_statement, param_idx, val)
    return ccall(
        (:duckdb_bind_float, libduckdb),
        Float64,
        (Ptr{Cvoid}, Int32, Float64),
        prepared_statement,
        param_idx,
        val,
    )
end

"""
Binds a duckdb_date value to the prepared statement at the specified index.

DUCKDB_API duckdb_state duckdb_bind_date(duckdb_prepared_statement prepared_statement, idx_t param_idx,
                                         duckdb_date val);
"""
function duckdb_bind_date(prepared_statement, param_idx, val)
    return ccall(
        (:duckdb_bind_date, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32, Int32),
        prepared_statement,
        param_idx,
        val,
    )
end

"""
Binds a duckdb_time value to the prepared statement at the specified index.

DUCKDB_API duckdb_state duckdb_bind_time(duckdb_prepared_statement prepared_statement, idx_t param_idx,
                                         duckdb_time val);
"""
function duckdb_bind_time(prepared_statement, param_idx, val)
    return ccall(
        (:duckdb_bind_time, libduckdb),
        Int32,
        (Ptr{Cvoid}, Int32, Int32),
        prepared_statement,
        param_idx,
        val,
    )
end

"""
Binds a duckdb_timestamp value to the prepared statement at the specified index.
